conf/partytime/partytime-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: partytime

spec:
  ports:
  - name: partytime-http
    protocol: TCP
    port: 80
  selector:
    app: partytime
