conf/partytime/partytime-ingress-tls.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http-redirect-partytime
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`party.crookster.org`)
      services:
        - name: partytime
          port: 80
      middlewares:
        - name: redirect-to-https
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-partytime

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`party.crookster.org`)
      services:
        - name: partytime
          port: 80
      # middlewares:
      #   - name: my-fail2ban
  tls:
    certResolver: myresolver
